Conecção de Telas

--- a/home/home.html
+++ b/home/home.html
@@ -17,7 +17,7 @@
         <li><a href="#">Quem Somos</a></li>
         <li><a href="#">Doações</a></li>
         <li><a href="#">Bazar</a></li>
-        <li><a href="#">Adoção</a></li>
+        <li><a href="../adocoes/adocoes.html">Adoção</a></li>
         <li><a href="#">Guias</a></li>
         <li class="contato"><a href="">Contato</a></li>
       </ul>
