Criação de Função JS para Formulário de Adoção

--- a/adocoes/adocoes.html
+++ b/adocoes/adocoes.html
@@ -43,9 +43,9 @@
 
       <div class="dupla_cards">
     
-            <!-- CARD 1-->
-             <a href="">
-                <div class="card1">
+            <!-- CARD-->
+             <a href="#" class="card-link">
+                <div class="card" data-animal="kaleb">
             <img src="../img/gato1.png" alt="Gato filhote na vegetação" />
 
             <div class="infos">
@@ -56,11 +56,11 @@
             </div>
           </div>
              </a>
-          <!-- CARD 1-->
+          <!-- CARD-->
 
            <!-- CARD 2-->
-            <a href="">
-                 <div class="card2">
+            <a href="#" class="card-link" >
+                 <div class="card" data-animal="alexsander">
             <img src="../img/gato2.png" alt="Gato filhote na vegetação" />
 
             <div class="infos">
@@ -79,7 +79,7 @@
     
             <!-- CARD 1-->
              <a href="">
-                <div class="card1">
+                <div class="card">
             <img src="../img/gato1.png" alt="Gato filhote na vegetação" />
 
             <div class="infos">
@@ -94,7 +94,7 @@
 
            <!-- CARD 2-->
             <a href="">
-                 <div class="card2">
+                 <div class="card">
             <img src="../img/gato2.png" alt="Gato filhote na vegetação" />
 
             <div class="infos">
@@ -121,5 +121,7 @@
       <script>
         new window.VLibras.Widget('https://vlibras.gov.br/app');
       </script>
+
+      <script src="../script.js"></script>
   </body>
 </html>
