Criação de Tela de Doações

--- a/adocoes/adocoes.html
+++ b/adocoes/adocoes.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Adoções</title>
     <link rel="stylesheet" href="adocoes.css" />
+    <link rel="stylesheet" href="../home/home.css">
   </head>
   <body>
      <nav>
@@ -15,7 +16,7 @@
           /></a>
         </li>
         <li><a href="#">Quem Somos</a></li>
-        <li><a href="#">Doações</a></li>
+        <li><a href="../doacoes/doacoes.html">Doações</a></li>
         <li><a href="#">Bazar</a></li>
         <li><a href="#">Adoção</a></li>
         <li><a href="#">Guias</a></li>
