--- a/home/home.html
+++ b/home/home.html
@@ -15,7 +15,7 @@
           /></a>
         </li>
         <li><a href="#">Quem Somos</a></li>
-        <li><a href="#">Doações</a></li>
+        <li><a href="../doacoes/doacoes.html">Doações</a></li>
         <li><a href="#">Bazar</a></li>
         <li><a href="../adocoes/adocoes.html">Adoção</a></li>
         <li><a href="#">Guias</a></li>
@@ -27,7 +27,7 @@
       <div class="apresentacao">
         <img src="../img/logo-preta.png" alt="Logotipo Marabichos Preta" />
         <h1>Dando voz aqueles <br>  que não conseguem falar!</h1>
-        <a href="pagina.html" class="botao-link">Seja um doador</a>
+        <a href="#" class="botao-link">Seja um doador</a>
       </div>
 
       <div class="cachorro">
