--- a/home/home.html
+++ b/home/home.html
@@ -37,6 +37,41 @@
         />
       </div>
     </div>
+<!-- 
+    <footer>
+        <div class="redes">
+          <p><strong>Redes Sociais: </strong></p>
+          <div class="redes-link">
+            <div class="instagram">
+                <img src="../img/instagram.png" alt="Logo Instagram">
+                <p>Instagram</p>
+            </div>
+
+            <div class="facebook">
+                <img src="../img/facebook.png" alt="Logo Facebook">
+                <p>Facebook</p>
+            </div>
+          </div>
+        </div>
+
+           <div class="redes">
+          <p><strong>Contatos: </strong></p>
+          <div class="redes-link">
+            <div class="instagram">
+                <img src="../img/whatsapp.png" alt="Logo Whatsapp">
+                <p>Whatsapp</p>
+            </div>
+
+            <div class="email">
+                <img src="../img/mail.png" alt="Logo Email">
+                <p>Email</p>
+            </div>
+          </div>
+        </div>
+
+
+    </footer>
+    -->
 
     <div vw class="enabled">
         <div vw-access-button class="active"></div>
@@ -48,5 +83,7 @@
       <script>
         new window.VLibras.Widget('https://vlibras.gov.br/app');
       </script>
+
+      <script src="../script.js"></script>
   </body>
 </html>
