--- a/adocoes/adocoes.html
+++ b/adocoes/adocoes.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Adoções</title>
     <link rel="stylesheet" href="adocoes.css" />
-    <link rel="stylesheet" href="../home/home.css">
+    <link rel="stylesheet" href="../home.css">
   </head>
   <body>
      <nav>
       <ul>
         <li>
-          <a href="../home/home.html"
+          <a href="../home.html"
             ><img src="../img/logo-preta.png" alt="Logotipo Marabichos Preta"
           /></a>
         </li>
