--- a/doacoes/doacoes.html
+++ b/doacoes/doacoes.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Doações</title>
     <link rel="stylesheet" href="../doacoes/doacoes.css">
-    <link rel="stylesheet" href="../home/home.css">
+    <link rel="stylesheet" href="../home.css">
 </head>
 
 <body>
     <nav>
-        <ul>
+        <ul>    
             <li>
-                <a href="../home/home.html"><img src="../img/logo-preta.png" alt="Logotipo Marabichos Preta" /></a>
+                <a href="../home.html"><img src="../img/logo-preta.png" alt="Logotipo Marabichos Preta" /></a>
             </li>
             <li><a href="#">Quem Somos</a></li>
             <li><a href="#">Doações</a></li>
