--- a/adocoes/adocoes.html
+++ b/adocoes/adocoes.html
@@ -11,7 +11,7 @@
      <nav>
       <ul>
         <li>
-          <a href="../home.html"
+          <a href="../index.html"
             ><img src="../img/logo-preta.png" alt="Logotipo Marabichos Preta"
           /></a>
         </li>
