--- a/doacoes/doacoes.html
+++ b/doacoes/doacoes.html
@@ -13,7 +13,7 @@
     <nav>
         <ul>    
             <li>
-                <a href="../home.html"><img src="../img/logo-preta.png" alt="Logotipo Marabichos Preta" /></a>
+                <a href="../index.html"><img src="../img/logo-preta.png" alt="Logotipo Marabichos Preta" /></a>
             </li>
             <li><a href="#">Quem Somos</a></li>
             <li><a href="#">Doações</a></li>
