--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="apresentacao">
         <img src="../img/logo-preta.png" alt="Logotipo Marabichos Preta" />
         <h1>Dando voz aqueles <br>  que não conseguem falar!</h1>
-        <a href="#" class="botao-link">Seja um doador</a>
+        <a href="/adocoes/adocoes.html" class="botao-link">Seja um doador</a>
       </div>
 
       <div class="cachorro">
